--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^0.13.3
   shared_preferences: ^2.1.0
-
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
